--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
 
 <body>
     <h1>Odin Recipes</h1>
-    <a href="/recipes/french-toast.html">French Toast</a>
+    <h2>Recipes:</h2>
+    <ul>
+        <li><a href="/recipes/french-toast.html">French Toast</a></li>
+        <li><a href="/recipes/pancakes.html">Pancakes</a></li>
+    </ul>
 </body>
 
 </html>
