--- a/recipes/french-toast.html
+++ b/recipes/french-toast.html
@@ -29,5 +29,7 @@
         <li>Transfer to the hot skillet and cook until golden, 3 to 4 minutes per side.</li>
         <li>Serve hot.</li>
     </ol>
+
+    <a href="/index.html">Return to main page</a>
 </body>
 </html>
