--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <ul>
         <li><a href="/recipes/french-toast.html">French Toast</a></li>
         <li><a href="/recipes/pancakes.html">Pancakes</a></li>
+        <li><a href="/recipes/blueberry-compote.html">Blueberry Compote</a></li>
     </ul>
 </body>
 
