--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
 <body>
     <h1>Odin Recipes</h1>
+    <img src="/imgs/chef.jpeg" alt="chef" height="400px">
     <h2>Recipes:</h2>
     <ul>
         <li><a href="/recipes/french-toast.html">French Toast</a></li>
